33: Minor style updates for the tool icon, added visibility toggle functionality and solved not updating data when changing product.

--- a/src/app/overlay-items/hierarchy-viewer/hierarchy-overlay/hierarchy-overlay.component.scss
+++ b/src/app/overlay-items/hierarchy-viewer/hierarchy-overlay/hierarchy-overlay.component.scss
@@ -2,7 +2,7 @@
 @use "spacing";
 @use "interactions";
 
-$left: 3.125em;
+$left: 40px;
 
 .hierarchy-container {
   position: absolute;
