--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   user-select: none;
-  font-size: 2.5em;
+  font-size: 2em;
 }
 
 .icon-interactive {
@@ -26,8 +26,8 @@
 .icon-fixed-size {
   position: relative;
   display: inline-block;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   overflow: hidden;
   // We'll use the .icon-* classes to render the icon which uses :before { content: 'symbol'; }
   &:before {
